@@ -178,3 +178,7 @@ Tue Feb  7 11:11:12 2012                        Michael Jennings (mej)
 
 Various fixes and release of 1.1.4.
 ----------------------------------------------------------------------
+Tue Mar 13 11:22:45 2012                        Michael Jennings (mej)
+
+Bump version.  More consistency/cleanups.
+----------------------------------------------------------------------
